# lessons-crawler

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml  setup.py
lessons_crawler/: db.py
lessons_crawler/app/: lesson_data_updater.py  lesson_download_files.py  lessons_updater.py
lessons_crawler/cli/: __init__.py
lessons_crawler/dao/: lesson_dao.py  lesson_data_dao.py  rnp_lesson_data_dao.py  rnp_lesson_file_dao.py  rnp_lessons_dao.py  subject_dao.py
lessons_crawler/helpers/: __init__.py  xml_parser.py
lessons_crawler/models/: lesson_data.py  lesson_datas.py  lessons.py  professors.py  subjects.py
tests/: test_lessons_crawler.py
