[tool.poetry]
name = "lessons-crawler"
version = "0.1.0"
description = ""
authors = ["Thiago da Cunha Borges <thiagoborges@id.uff.br>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.19"
python-dotenv = "^0.14.0"
psycopg2-binary = "^2.8.6"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
lxml = "^4.5.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.5.2"
black = "^20.8b1"

[tool.poetry.scripts]
lessons-crawler = "lessons_crawler.cli:cli"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

